create github pages

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <h1 class="mbr-section-title mbr-semibold pb-3 mbr-fonts-style display-1"><strong>eKYC.ph</strong></h1>
                 <p class="mbr-text pb-3 mbr-fonts-style display-2">
                     Know Your Customer<br>Know Your Citizen</p>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-5" href="popup:#mbr-popup-r" data-toggle="modal" data-target="#mbr-popup-r">BOOK A DEMO</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-5" href="popup:#mbr-popup-r" data-toggle="modal" data-target="#mbr-popup-r">BOOK A DEMO NOW</a></div>
             </div>
         </div>
     </div>
@@ -93,7 +93,7 @@
 
                             <div class="form-wrapper" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Book Now Form"><input type="hidden" name="email" data-form-email="true" value="iIPwKs3rOMYg8DQuUvbJYJoZ2JjZ8uCc+OHOFooeSWafQcs295ciIlyC/PqChiPyhiULuqFQM8CXLis2EHInaZJRbTSVVk3dicicRcM54C4utt7OtVDaXlKAlqxTglWy.psRAcCO19PSIwmLqvFnploLFJfOZxG4eGXbDRvKSm+X/hDsty7c4vPkV+t9a7XiX/y2DJ6ahASReLMl9p72XRVOxeXSE2eUUj6Gza8/4qKB9aPBp6lkAIWsi2JuD+4Pk">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Book Now Form"><input type="hidden" name="email" data-form-email="true" value="FWTIIDegMqNLFaVYSJBEgC6Mkxv/OpNmQ1h3+R1kvqYBLs/07tnVsF2oaM3naVcpG6SVokn0AUHsL+y7ANgY8YzT3RqZfjGLglhJumxzjym3azVOwXeeCXpmAG+httrv.OqWjeIoWIanpB5FSZYZshPCUh5wY5CVMUQcL5qwYBAUm7hbh/ycIasc0oWy9hX1ZSQI4CXlBNHKiHfG1VjXkQMbfQzTVi6i/4f5Xh8K4q0z1hJiiBKPGFMEhCg9j7d7I">
 <div class="">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for reaching us! We will contact you as soon as possible.</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
