--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
                             <div class="form-wrapper" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Book Now Form"><input type="hidden" name="email" data-form-email="true" value="FWTIIDegMqNLFaVYSJBEgC6Mkxv/OpNmQ1h3+R1kvqYBLs/07tnVsF2oaM3naVcpG6SVokn0AUHsL+y7ANgY8YzT3RqZfjGLglhJumxzjym3azVOwXeeCXpmAG+httrv.OqWjeIoWIanpB5FSZYZshPCUh5wY5CVMUQcL5qwYBAUm7hbh/ycIasc0oWy9hX1ZSQI4CXlBNHKiHfG1VjXkQMbfQzTVi6i/4f5Xh8K4q0z1hJiiBKPGFMEhCg9j7d7I">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Book Now Form"><input type="hidden" name="email" data-form-email="true" value="xL3EDCRIOw86r9yQETpYvXe+rGUQgyEmQQ6+xUdMfv91Y6L4JBZg+wts7HniXoB5cl3IbT86EQ1bnx0lym7/gtyci/bcFvKNsmmmuNGqiaaeWyTFkT7XSVqP47ffS2wd.BPovz4Np4RA+Echpd7TMPw0KpsM2RIW94TvriS9yu1wicf6wpd7/dr1E9uAysTldNFY8e6oYkNuupjbm5oMTkEGvevNkIIhj+AD+1ZSjKajURnW3yUBdogEwzhWwfAeu">
 <div class="">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for reaching us! We will contact you as soon as possible.</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -263,7 +263,7 @@
             <div class="col-12 col-md-6 col-lg-3">
                 <div class="media-wrap align-left">
                     <a href="#">
-                        <img src="assets/images/ekyc-1.png" alt="" title="">
+                        <img src="assets/images/group-193x.png" alt="" title="">
                         <p class="mbr-text mbr-fonts-style form-text mt-2 display-4"><br><strong>Powered by Traxion Tech Inc</strong><br></p>
                     </a>
                 </div>
@@ -271,17 +271,17 @@
                 <div class="social-list align-left">
                     <div class="soc-item">
                         <a href="http://traxiontech.net" target="_blank">
-                            <span class="mbr-iconfont mbr-iconfont-social mdi-hardware-laptop-mac" style="color: rgb(0, 59, 92); fill: rgb(0, 59, 92);"></span>
+                            <span class="mbr-iconfont mbr-iconfont-social mdi-hardware-laptop-mac" style="color: rgb(62, 63, 99); fill: rgb(62, 63, 99);"></span>
                         </a>
                     </div>
                     <div class="soc-item">
                         <a href="mailto:reina.isomura@traxiontech.net">
-                            <span class="mbr-iconfont mbr-iconfont-social mdi-communication-email" style="color: rgb(0, 59, 92); fill: rgb(0, 59, 92);"></span>
+                            <span class="mbr-iconfont mbr-iconfont-social mdi-communication-email" style="color: rgb(62, 63, 99); fill: rgb(62, 63, 99);"></span>
                         </a>
                     </div>
                     <div class="soc-item">
                         <a href="tel:+639171644326">
-                            <span class="mbr-iconfont mbr-iconfont-social mdi-communication-call" style="color: rgb(0, 59, 92); fill: rgb(0, 59, 92);"></span>
+                            <span class="mbr-iconfont mbr-iconfont-social mdi-communication-call" style="color: rgb(62, 63, 99); fill: rgb(62, 63, 99);"></span>
                         </a>
                     </div>
                     
