create github pages

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 <meta property="og:description" content="Know your customer, know your citizen through digital ID. ">
 
 <meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:image:src" content="https://abernados.github.io/eKYC/assets/images/ofm-image.png" />
-<meta property="og:image" content="https://abernados.github.io/eKYC/assets/images/ofm-image.png" />
+<meta name="twitter:image:src" content="https://abernados.github.io/eKYC-main/assets/images/shutterstock-1221445678.jpg" />
+<meta property="og:image" content="https://abernados.github.io/eKYC-main/assets/images/shutterstock-1221445678.jpg" />
 
 
 <!-- Twitter -->
@@ -93,7 +93,7 @@
 
                             <div class="form-wrapper" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Book Now Form"><input type="hidden" name="email" data-form-email="true" value="T2JtbGxo4bB6a8TO0jy+BckaXOqOwZYfg6LaGnSqm+uh9btwfd7TCFDScOlwucnTf9PnX864JsM/mwRxnFhYTeEc0p6ntQe4z5c7EcQqFR1hK8dY3xwnm9S5D1iSxCjr.taOsopZpC5BePTLPnpw/MsGZeyNSVDnTYSAiQOXs/Nqe+WGQDByn7CWtvkles6pOrB/1PaxXKYX5ArEfip3KsN8urbrJqqW4spmo+LXc01dStuMtmYQ7VITC7CBCHbmR">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Book Now Form"><input type="hidden" name="email" data-form-email="true" value="OcdDnq34zIlvbTuhc9yx2I5kIhE53IlT9OTtm1WT+3N9pHvW3uJoC+QBmFAwthag5pPG82Q+x8f3yUzdC+3CDsuMWnSOclmOBlJGuzGiLxA3elOXZGFuAEITDgiNwJsx.iqo2z73rrXRsu46VAW6UvZseTuXaRev2OOCSDQPFDkCulhPbJcTFHf5CWXgNHNOxStN7pdBSTUeBYWgY+tKBaMzmJINGpUpemZNWfuVwGNa3xxhiGRU9W0+12o+HsgBj">
 <div class="">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for reaching us! We will contact you as soon as possible.</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
