create github pages

--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/ekyc.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/group-193x-1.png" type="image/x-icon">
   <meta name="description" content="Know your customer, know your citizen through digital ID.">
   
   <title>eKYC</title>
-  <link rel="stylesheet" href="assets/bootstrap-material-design-font/css/material.css">
+  <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
-  <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.css">
+  <link rel="stylesheet" href="assets/bootstrap-material-design-font/css/material.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
@@ -41,8 +41,8 @@
 <meta property="og:description" content="Know your customer, know your citizen through digital ID. ">
 
 <meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:image:src" content="https://abernados.github.io/eKYC-main/assets/images/shutterstock-1221445678.jpg" />
-<meta property="og:image" content="https://abernados.github.io/eKYC-main/assets/images/shutterstock-1221445678.jpg" />
+<meta name="twitter:image:src" content="https://ekyc.ph/assets/images/banner-facial-recognition-copy-1.jpg" />
+<meta property="og:image" content="https://ekyc.ph/assets/images/banner-facial-recognition-copy-1.jpg" />
 
 
 <!-- Twitter -->
@@ -93,7 +93,7 @@
 
                             <div class="form-wrapper" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Book Now Form"><input type="hidden" name="email" data-form-email="true" value="OcdDnq34zIlvbTuhc9yx2I5kIhE53IlT9OTtm1WT+3N9pHvW3uJoC+QBmFAwthag5pPG82Q+x8f3yUzdC+3CDsuMWnSOclmOBlJGuzGiLxA3elOXZGFuAEITDgiNwJsx.iqo2z73rrXRsu46VAW6UvZseTuXaRev2OOCSDQPFDkCulhPbJcTFHf5CWXgNHNOxStN7pdBSTUeBYWgY+tKBaMzmJINGpUpemZNWfuVwGNa3xxhiGRU9W0+12o+HsgBj">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Book Now Form"><input type="hidden" name="email" data-form-email="true" value="l58esJJ0vtMsFKxWgp+K9mpmpqDylc/jN6x3B4gaVpS84XiArZtTeHmy7CSu6Zrq/0zb1F/V8O3KKHOsUKpRSSbF28GGYTyEy5EoD67WtXWCH7W0ncujfyaL4+fGF36Q.UKjs4voGhk6qssakUwGnqSDQjPrViR/7wHpbkDcVuYG7UDF7qZJ0kF71kqwduSbOVURWBEi5+Wwqev9zMoAZqo/87UAq8HEEqwJH9HiRHVfwj3+/It1LniW8k7Dn08DF">
 <div class="">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for reaching us! We will contact you as soon as possible.</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
