--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   
-  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
+  <meta name="twitter:card" content="summary_large_image"/>
+<meta name="twitter:image:src" content="assets/images/index-meta.jpg"/>
+<meta property="og:image" content="assets/images/index-meta.jpg"/>
+<meta name="twitter:title" content="eKYC | Know your customer, know your citizen through digital ID"/>
+<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/group-193x-1.png" type="image/x-icon">
-  <meta name="description" content="Know your customer, know your citizen through digital ID.">
+  <meta name="description" content="">
   
-  <title>eKYC</title>
+  <title>eKYC | Know your customer, know your citizen through digital ID</title>
   <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
@@ -28,8 +32,7 @@
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
-  <meta name="title" content="OFH">
-<meta name="description" content="Know your customer, know your citizen through digital ID.">
+  <meta name="title" content="eKYC | Know your customer, know your citizen through digital ID">
 <meta name="robots" content="index, follow">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="language" content="English">
@@ -37,8 +40,7 @@
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
 <meta property="og:url" content="http://ekyc.ph/">
-<meta property="og:title" content="eKYC">
-<meta property="og:description" content="Know your customer, know your citizen through digital ID. ">
+<meta property="og:title" content="eKYC | Know your customer, know your citizen through digital ID">
 
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:image:src" content="https://ekyc.ph/assets/images/banner-facial-recognition-copy-1.jpg" />
@@ -47,7 +49,7 @@
 
 <!-- Twitter -->
 <meta property="twitter:url" content="http://ekyc.ph/">
-<meta property="twitter:description" content="Know your customer, know your citizen through digital ID.">
+<meta property="twitter:title" content="Know your customer, know your citizen through digital ID.">
 
 
 </head>
@@ -93,7 +95,7 @@
 
                             <div class="form-wrapper" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Book Now Form"><input type="hidden" name="email" data-form-email="true" value="l58esJJ0vtMsFKxWgp+K9mpmpqDylc/jN6x3B4gaVpS84XiArZtTeHmy7CSu6Zrq/0zb1F/V8O3KKHOsUKpRSSbF28GGYTyEy5EoD67WtXWCH7W0ncujfyaL4+fGF36Q.UKjs4voGhk6qssakUwGnqSDQjPrViR/7wHpbkDcVuYG7UDF7qZJ0kF71kqwduSbOVURWBEi5+Wwqev9zMoAZqo/87UAq8HEEqwJH9HiRHVfwj3+/It1LniW8k7Dn08DF">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Book Now Form"><input type="hidden" name="email" data-form-email="true" value="FkpjNOIUgLQu6PaKwWqfwbwguZjD6lsF1rgD6FdTD5ItCRnwp6cqpYNya7wcAkTPfWCk3yvVDVxuXWwwJaLjkTLXOB8ZVx8X/2Z/eF3JE1bcg+Y764Bz3UySqBQlLZec.R8yQnM7yzgGVtQwGethZeca3fbthNwwlNFid2xEOg0Xtn9m5rkQJ/cMO6krPmuywHVq8pr3yfju879d4+wUPrNOZVsV1EMSWtRG88c0uUEWEagcRtuCDOQ24OX9PPKnP">
 <div class="">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for reaching us! We will contact you as soon as possible.</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
